<resources>
    <string name="app_name">Night Mode</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_wifi_preferences">Wifi</string>
    <string name="subtitle_wifi_preferences">Turn off wifi whene night mode is on</string>
    <string name="title_sections_preferences">Preferences</string>
    <string name="title_bluetooth_preferences">Bluetooth</string>
    <string name="subtitle_bluetooth_preferences">Turn off bluetooth when night mode is on</string>
    <string name="title_alarm_preferences">Alarm Sound</string>
    <string name="subtitle_alarm_preferences">Switch on alarm sound</string>
    <string name="title_silent_preferences">Do not disturb Mode</string>
    <string name="subtitle_silent_preferences">Switch on do not disturb mode when night mode is on</string>
    <string name="title_sections_style">Style Preferences</string>
    <string name="title_sections_toggles">Main Toggles</string>
    <string name="app_name_enabled">%s Mode Enabled</string>
    <string name="app_name_disabled">%s Mode Disabled</string>
    <string name="action_disabled_night_mode">Click here to disabled %s mode</string>
    <string name="title_sections_toggle_preferences">Toggle Preferences</string>
    <string name="title_remember_old_preferences">Remember Status</string>
    <string name="subtitle_remember_old_preferences">Remember old toggle status</string>
    <string name="title_alarm_level_preferences">Alarm Level</string>
    <string name="subtitle_alarm_level_preferences">Chosse alarm level when night mode is on</string>
    <string name="action_save">Save</string>
    <string name="title_choose_toggle_preferences">Choose toggles</string>
    <string name="subtitle_choose_toggle_preferences">Choose what to switch when night mode is activated</string>
    <string name="title_notification_preferences">Night mode off notification</string>
    <string name="subtitle_notification_preferences">Show a notification when night mode is on to turn off that</string>
    <string name="start_time_disabled">Activated last time %s</string>
    <string name="start_time_enabled">Activated %s</string>
    <string name="text_never">never</string>
    <string name="action_enable">Enable</string>
    <string name="action_disable">Disable</string>
    <string name="title_activity_about">About</string>
    <string name="subtitle_about">App info, help and feedback</string>
    <string name="subtitle_settings">Manage preferences and app settings</string>
    <string name="text_version">v. %s</string>
    <string name="title_community">Night Mode Community</string>
    <string name="subtitle_community">Help, feedback and suggestions</string>
    <string name="add_widget">Add widget</string>
    <string name="title_auto_preferences">Automatic Rules</string>
    <string name="subtitle_auto_preferences">Add rules to activate night mode automatically</string>
    <string name="title_nfc_preferences">Nfc Receiver</string>
    <string name="subtitle_nfc_preferences">Pair a nfc item to activate night mode faster</string>
    <string name="subtitle_nfc_paired_preferences">Nfc item paired</string>
    <string name="error_nfc_disabled">Nfc Disabled</string>
    <string name="text_great">Great</string>
    <string name="title_activity_rules">Automatic Rules</string>
    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tuesday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>
    <string name="text_sunday">Sunday</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="title_screen_preferences">Screen Off</string>
    <string name="subtitle_screen_preferences">Turn off screen when you enable night mode</string>
    <string name="text_no_alarm">No Alarm</string>
    <string name="text_day_after">Day After</string>
    <string name="title_set_alarm">Set Alarm</string>
    <string name="subtitle_set_alarm">Entering this alarm, the device will go into night mode automatically from start time to end time.</string>
    <string name="action_reset">Reset</string>
    <string name="text_attention">Attention</string>
    <string name="text_ask_reset_alarm">Are you sure you want to reset this alarm?</string>
    <string name="action_grant_deviceadmin">Make this application a device administrator to use this feature</string>
    <string name="text_request_dev">Make this application a device administrator to turn off screen when you enable night mode</string>
    <string name="warning_remove_dev">Warning: remove admin permissions shout down screen off feature</string>
    <string name="action_pair_nfc">Touch your phone to a nfc tag. You’ll then hear a notification tone or feel a vibration as soon as the NFC tag is activated.</string>
    <string name="title_sections_automate">Automatic Actions</string>
    <string name="text_at">at</string>
    <string name="text_on">on</string>
    <string name="text_ask_reset_nfc">Are you sure to reset nfc tag id?</string>
    <string name="text_ask_update_nfc">Are you sure to update nfc tag id and lose the old one?</string>
    <string name="title_priority_preferences">Priority Mode</string>
    <string name="action_grant_notificationaccess">Grant notification access to set priority mode when night mode is activated</string>
    <string name="subtitle_priority_preferences">Switch to priority mode from only allarm when night mode is activated</string>
    <string name="active_notification">Active "Turn off Night Mode" notification</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="text_error">Error</string>
    <string name="text_mode">%s Mode</string>
    <string name="mode_day">Day</string>
    <string name="mode_night">Night</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="seconds">s</string>
    <string name="minutes">m</string>
</resources>